--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,4 @@ name = "astrbot_plugin_tsserver_relay"
 version = "1.0.0"
 description = "TeamSpeak 3 服务器监控插件"
 requires-python = ">=3.10"
-dependencies = [
-    "ts3>=2.0.0",
-]
+dependencies = ["ts3>=1.0.11"]
