--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,4 +2,4 @@ name: astrbot_plugin_tsserver_relay
 desc: TeamSpeak 3 服务器监控 - 实时推送用户进出、服务器状态到群消息
 author: GEMILUXVII
 version: 1.0.0
-repo: ""
+repo: "https://github.com/GEMILUXVII/astrbot_plugin_tsserver_relay"
